# models/dictionary.go
@@ -1,8 +1,14 @@
 package models
 
-type Dictionary struct {
-	ID       int       `json:"id,omitempty"`
-	Name     string    `json:"name,omitempty"`
-	Language *Language `json:"language,omitempty"`
-	Cards    []Card    `json:"cards,omitempty"`
+type CreateDictionary struct {
+	ID          int               `json:"id,omitempty"`
+	Name        string            `json:"name,omitempty"`
+	Description string            `json:"description,omitempty"`
+	Cards       []AddedToDictCard `json:"cards,omitempty"`
+}
+
+type DictionaryInfo struct {
+	ID          int    `json:"id,omitempty"`
+	Name        string `json:"name,omitempty"`
+	Description string `json:"description,omitempty"`
 }
