# models/word.go
@@ -4,3 +4,8 @@ type Word struct {
 	Name     string    `json:"name,omitempty"`
 	Language *Language `json:"language,omitempty"`
 }
+
+type AddedToDictWord struct {
+	Name     string `json:"name,omitempty"`
+	Language int    `json:"langID,omitempty"`
+}
